<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sample Messages</string>
    <string name="qb_slogan">YOUR COMMUNICATION \nBACKEND</string>
    <string name="hint_enter_your_message">Enter Your message here</string>
    <string name="send">Send notification to yourself</string>
    <string name="received_messages">Received messages</string>
    <string name="no_messages">No messages</string>
    <string name="open_checker">Open push notification checker</string>
    <string name="start_checker">Start checker</string>
    <string name="stop_checker">Stop checker</string>
    <string name="send_time">Send time</string>
    <string name="delivery_time">Delivery time</string>
    <string name="traveling_time">Traveling time \n(sec)</string>

</resources>